# ai-tutor-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.gradio  LICENSE  README.md  SECURITY.md  evals.md  evals_compaction.md  evals_graphrag.md  evals_part_c_plan.md  evals_slm_compaction.md  everything context engineering (annotated).md  everything context engineering.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-prod-to-hf.yml  deploy-workshop-hf.yml  sync-to-hf.yml
app/: api.py  chat_service.py  chat_types.py  chroma_rag.py  config.py  deepseek_chat.py  generate_qa_dataset.ipynb  graph_rag.py  kb_manifest.py  kb_shell.py  memory_presets.py  prompts.py  provider_events.py  setup.py  telemetry.py
data/: .gitattributes  source_versions.json  url_matching_procedure.md
data/eval/: README.md
data/graphrag/: settings.yaml
data/scraping_scripts/: README.md  add_context_to_nodes.py  add_course_workflow.py  annotate_discussion_posts.py  (+20 more)
evals/: __init__.py  background.md  check_triggers.py  common.py  compaction.md  compaction_compare.py  compaction_study.py  context_rot.py  context_rot_state.py  contributing.md  grade.py  grade_workflow.js  grading_content.py  grading_merge.py  grading_prep.py  graphrag.md  handgrade_workbook.py  judge.py  knowledge_compaction.py  part_c_plan.md  rejudge_compaction.py  report.py  run_battery.py  run_compaction_experiment.py  run_compaction_study.sh  run_slm_axis_a.sh  run_slm_compaction.sh  run_subscription_grading.py  slm_compaction.md
frontend/: .env.example  .env.local  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
scripts/: agent_tracing.py  api.py  chat_service.py  chat_types.py  chroma_rag.py  contextual_retrieval.py  custom_retriever.py  evaluate_rag_system.py  gradio_presenter.py  kb_manifest.py  kb_shell.py  main.py  probe_gemini_cache.py  prompts.py  setup.py  utils.py
tests/: conftest.py  manual_e2e_langsmith.md  test_agent_tracing.py  test_api.py  test_build_kb_artifacts.py  test_build_public_docs_bundle.py  test_chat_service.py  test_chroma_rag.py  test_config.py  test_create_vector_stores.py  test_eval_harness.py  test_evals_grade.py  test_grading_pipeline.py  test_gradio_kb_e2e.py  test_gradio_presenter.py  test_graph_rag.py  test_incremental_context.py  test_kb_manifest.py  test_kb_shell.py  test_lint_kb_wiki.py  test_memory_presets.py  test_memory_variants.py  test_process_md_files.py  test_prompts.py  test_provider_events.py  test_retire_source_workflow.py  test_telemetry.py  test_update_kb_wiki.py
(+32 files in other folders)
