[project]
name = "ai-tutor-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "chromadb",
    "cohere",
    "fastapi",
    "google-genai",
    "gradio",
    "hf-xet",
    "huggingface-hub",
    "instructor",
    "ipykernel",
    "langchain",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-openai",
    "llama-index",
    "logfire",
    "nbconvert",
    "nbformat",
    "openai",
    "pydantic",
    "pymongo",
    "python-dotenv",
    "requests",
    "tiktoken",
    "uvicorn",
]

[dependency-groups]
dev = [
    "httpx",
    "ruff>=0.15.10",
]
