[project]
name = "ai-tutor-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "chromadb",
    "cohere",
    "fastapi",
    "google-genai",
    "hf-xet",
    "huggingface-hub",
    "langchain",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-openai",
    "llama-index",
    "nbconvert",
    "nbformat",
    "openai",
    "pydantic",
    "python-dotenv",
    "requests",
    "tiktoken",
    "uvicorn",
]

[dependency-groups]
dev = [
    "httpx",
    "ipykernel",
    "pre-commit",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"
