[project]
name = "ai-tutor-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "chromadb",
    "cohere",
    "fastapi",
    "google-genai",
    "hf-xet",
    "huggingface-hub",
    "langchain",
    "langchain-anthropic",
    "langchain-deepseek>=1.1.0",
    "langchain-google-genai",
    "langchain-openai",
    "llama-index",
    "nbconvert",
    "nbformat",
    "openai",
    "pydantic",
    "python-dotenv",
    "requests",
    "tiktoken",
    "uvicorn",
]

[project.optional-dependencies]
# Eval-only: the GraphRAG-vs-RAG experiment (F28). Pulls graphrag + lancedb/litellm/
# pandas, all imported lazily and only by the opt-in `graphrag` retriever — never on
# the production path. Kept out of the default install so the Spaces image stays lean.
# Reproduce the experiment with: uv sync --extra graphrag  (see evals/graphrag.md).
graphrag = ["graphrag>=3.1.0"]

[dependency-groups]
dev = [
    "httpx",
    "ipykernel",
    "pre-commit",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"
